// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CategoryCardSkeleton should match snapshot - compact 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-square bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-4"
  >
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
    </div>
  </div>
</div>
`;

exports[`CategoryCardSkeleton should match snapshot - default 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-[4/3] bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-4"
  >
    <div
      class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-1/4 mb-1"
    />
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
    </div>
    <div
      class="flex items-center justify-between"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-16"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-20"
      />
    </div>
  </div>
</div>
`;

exports[`CategoryCardSkeleton should match snapshot - large 1`] = `
<div
  class="block bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg overflow-hidden animate-pulse"
>
  <div
    class="relative aspect-[16/9] bg-gray-200 dark:bg-gray-700"
  />
  <div
    class="p-4"
  >
    <div
      class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-1/4 mb-1"
    />
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-3/4"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-1/2"
      />
    </div>
    <div
      class="space-y-2 mb-2"
    >
      <div
        class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-full"
      />
      <div
        class="h-3 bg-gray-200 dark:bg-gray-700 rounded w-4/5"
      />
    </div>
    <div
      class="flex items-center justify-between"
    >
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-16"
      />
      <div
        class="h-4 bg-gray-200 dark:bg-gray-700 rounded w-20"
      />
    </div>
  </div>
</div>
`;
